[package]
name = "regex-dfa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
colored = "2"
tokio = { version = "1", features = ["full"] }
rayon = "1"
regex = "1"
crossbeam = "0.8.1"
tracing = "0.1.29"
tracing-subscriber = "0.3.3"

